<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="85dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/button_color2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_size2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/textsize2"
        app:layout_constraintBottom_toTopOf="@+id/button_back2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_size1"
        app:layout_constraintTop_toBottomOf="@+id/button_color2" />

    <Button
        android:id="@+id/button_color1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/textcol1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_color2"
        app:layout_constraintEnd_toStartOf="@+id/button_color2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_color2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/textcol2"
        app:layout_constraintBottom_toTopOf="@+id/button_size2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_color1"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <Button
        android:id="@+id/button_size1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/textsize1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_size2"
        app:layout_constraintEnd_toStartOf="@+id/button_size2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/backcolor1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_back2"
        app:layout_constraintEnd_toStartOf="@+id/button_back2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_back2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="164dp"
        android:text="@string/backcolor2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back1"
        app:layout_constraintTop_toBottomOf="@+id/button_size2" />

</androidx.constraintlayout.widget.ConstraintLayout>